--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Para este ejercicio se pide documentar la API utilizando swagger y desplegar la misma en render. Debemos utilizar la API de tareas que creamos en la Review 2 de la semana pasada.",
     "main": "index.js",
     "scripts": {
+        "start": "node index.js",
         "dev": "nodemon index.js"
     },
     "author": "",
